--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 			@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300&display=swap');
 
+			li {
+				list-style-type: none;
+			}
+			
 			html {
 				background-color: whitesmoke;
 			}
