--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 			@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300&display=swap');
 
-			li {
-				list-style-type: none;
+			ul {
+				list-style-type: none !important;
 			}
-			
+
 			html {
 				background-color: whitesmoke;
 			}
