--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 			@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300&display=swap');
 
-			ul {
-				list-style-type: none !important;
+			.list-item {
+				display: inline-block;
 			}
 
 			html {
