--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300&display=swap');
 
 			.list-item {
-				display: inline-block;
+				display: block;
 			}
 
 			html {
