--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			
 			<hr>
 
-			<div>
+			<div style="width: 75%;">
 	
 				<h4># Habilidades</h4>
 
@@ -83,6 +83,8 @@
 					<span class="list-item"> ✓ Bash Script</span class="list-item">
 			
 			</div>
+
+			<div style="width: 24%; background-image: url(euae.jpg);"></div>
 
 			
 			<div>
