--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
 
 			<hr>
 
-			<p>
-				Programador full-stack JavaScript. Ampla experiência em frameworks front-end reativos (Vue.js, React.js e Angular), implementação de regras de negócios de modelos http/HTTPS no back-end com node.js e bancos de dados no-sql e cloud based. 
-			</p>
+			<div style="width: 75%;">
+				<p>
+					Programador full-stack JavaScript. Ampla experiência em frameworks front-end reativos (Vue.js, React.js e Angular), implementação de regras de negócios de modelos http/HTTPS no back-end com node.js e bancos de dados no-sql e cloud based. 
+				</p>
+			</div>
 			
+			<div style="width: 24%; background-image: url(euae.jpg);"></div>
+
 			<hr>
 
-			<div style="width: 75%;">
+			<div>
 	
 				<h4># Habilidades</h4>
 
@@ -83,8 +87,6 @@
 					<span class="list-item"> ✓ Bash Script</span class="list-item">
 			
 			</div>
-
-			<div style="width: 24%; background-image: url(euae.jpg);"></div>
 
 			
 			<div>
