--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 				
 				<h4># Experiencias e projetos</h4>
 
-					<span class="list-item">Desenvolvedor autônomo Google Play desde 2011; mais de 20 aplicações em produção </span class="list-item">
-					<span class="list-item">Projeto EzzOS > sistema SaaS de gestão para negócios de reparo/conserto e comércio.</span class="list-item">
-					<span class="list-item">Plugins open-source para Vue.js </span class="list-item">
-					<span class="list-item">Bibliotecas JavaScript open-source </span class="list-item">
-					<span class="list-item">Manutenção em projetos de terceiros como freelancer. </span class="list-item">
+					<span>Desenvolvedor autônomo Google Play desde 2011; mais de 20 aplicações em produção </span>
+					<span>Projeto EzzOS > sistema SaaS de gestão para negócios de reparo/conserto e comércio.</span>
+					<span>Plugins open-source para Vue.js </span>
+					<span>Bibliotecas JavaScript open-source </span>
+					<span>Manutenção em projetos de terceiros como freelancer. </span>
 
 
 			</div>
