--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
 			<hr>
 
-			<div style="width: 75%;">
+			<div style="width: 75%; display: inline-block;">
 				<p>
 					Programador full-stack JavaScript. Ampla experiência em frameworks front-end reativos (Vue.js, React.js e Angular), implementação de regras de negócios de modelos http/HTTPS no back-end com node.js e bancos de dados no-sql e cloud based. 
 				</p>
 			</div>
 			
-			<div style="width: 24%; background-image: url(euae.jpg);"></div>
+			<div style="width: 24%; display: inline-block; background-image: url(euae.jpg);"></div>
 
 			<hr>
 
