--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			html * {
 				font-family: Source Code Pro;
-				font-size: 1.9vh;
+				font-size: 1.7vh;
 			}
 
 			hr {
@@ -68,7 +68,7 @@
 				</p>
 			</div>
 			
-			<div style="width: 24%; display: inline-block; background-image: url(euae.jpg);"></div>
+			<div style="width: 24%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: cover; height: 200px;"></div>
 
 			<hr>
 
