--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</p>
 			</div>
 			
-			<div style="width: 24%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: cover; height: 200px;"></div>
+			<div style="width: 24%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 90px;"></div>
 
 			<hr>
 
