--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 		<section id="container">
 			
 			<h3>→ Rodolfo Paranhos</h3>
+			
+			<div style="width: 25%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 90px;"></div>
 
 			<hr>
 
@@ -67,8 +69,6 @@
 				</p>
 			</div>
 			
-			<div style="width: 25%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 90px;"></div>
-
 			<hr>
 
 			<div>
@@ -95,7 +95,7 @@
 					<span class="list-item"> ✓ Sistemas de fluxo de caixa e estoque</span class="list-item">
 					<span class="list-item"> ✓ Automação de atendimento </span class="list-item">
 					<span class="list-item"> ✓ Automação comercial </span class="list-item">
-					<span class="list-item"> ✓ Robôs de atendimento telegram e WhatsApp</span class="list-item">
+					<span class="list-item"> ✓ Robôs de telegram e WhatsApp</span class="list-item">
 					<span class="list-item"> ✓ Desenvolvimento de novas bibliotecas e frameworks</span class="list-item">
 					<span class="list-item"> ✓ Padrões de projeto JavaScript</span class="list-item">
 					<span class="list-item"> ✓ Virtualização de containers DevOps</span class="list-item">
@@ -103,6 +103,14 @@
 					<span class="list-item"> ✓ Integração de API</span class="list-item">
 					<span class="list-item"> ✓ Elaboração de API Rest</span class="list-item">
 
+			</div>
+
+			<div>
+
+				<h4># Idiomas</h4>
+					<span class="list-item"> ✓ Português (nativo)</span class="list-item">
+					<span class="list-item"> ✓ Inglês (fluente)</span class="list-item">
+					<span class="list-item"> ✓ Espanhol (intermediário)</span class="list-item">
 			</div>
 
 			<div>
@@ -116,14 +124,6 @@
 					<span>Manutenção em projetos de terceiros como freelancer. </span>
 
 
-			</div>
-
-			<div>
-
-				<h4># Idiomas</h4>
-					<span class="list-item"> ✓ Português (nativo)</span class="list-item">
-					<span class="list-item"> ✓ Inglês (fluente)</span class="list-item">
-					<span class="list-item"> ✓ Espanhol (intermediário)</span class="list-item">
 			</div>
 
 			<div>
@@ -154,8 +154,8 @@
 						<b>
 							<a 
 								target="_blank" 
-								href="https://api.whatsapp.com/send/?phone=5581981569557">
-								81 9 8156-9557
+								href="https://api.whatsapp.com/send/?phone=5581981238473">
+								81 9 8123-8473
 							</a>
 						</b>
 					</span class="list-item">
