--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
 
 		<section id="container">
 			
-			<h3>→ Rodolfo Paranhos</h3>
+			<h3 style="display: inline-block;
+			margin-top: 0;
+			margin-bottom: 0 !important;
+			position: relative;
+			top: -25px;">→ Rodolfo Paranhos</h3> 
 			
-			<div style="width: 25%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 90px;"></div>
+			<div style="width: 25%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 70px;"></div>
 
 			<hr>
 
