--- a/index.html
+++ b/index.html
@@ -57,17 +57,13 @@
 
 		<section id="container">
 			
-			<h3 style="display: inline-block;
-			margin-top: 0;
-			margin-bottom: 0 !important;
-			position: relative;
-			top: -25px;">→ Rodolfo Paranhos</h3> 
+			<h3 style="display: inline-block; margin-top: 0; margin-bottom: 0 !important; position: relative; top: -25px;">→ Rodolfo Paranhos</h3> 
 			
 			<div style="width: 25%; display: inline-block; background-image: url(euae.jpg); background-position: center; background-size: contain; background-repeat: no-repeat; height: 70px;"></div>
 
 			<hr>
 
-			<div style="width: 50%; display: inline-block;">
+			<div>
 				<p>
 					Programador full-stack JavaScript. Ampla experiência em frameworks front-end reativos (Vue.js, React.js e Angular), implementação de regras de negócios de modelos http/HTTPS no back-end com node.js e bancos de dados no-sql e cloud based. 
 				</p>
