--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<span class="list-item"> ✓ Automação de atendimento </span class="list-item">
 					<span class="list-item"> ✓ Automação comercial </span class="list-item">
 					<span class="list-item"> ✓ Robôs de telegram e WhatsApp</span class="list-item">
-					<span class="list-item"> ✓ Desenvolvimento de novas bibliotecas e frameworks</span class="list-item">
+					<span class="list-item"> ✓ Desenvolvimento de libs/frameworks</span class="list-item">
 					<span class="list-item"> ✓ Padrões de projeto JavaScript</span class="list-item">
 					<span class="list-item"> ✓ Virtualização de containers DevOps</span class="list-item">
 					<span class="list-item"> ✓ Integração continua de software</span class="list-item">
