--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 				
 				<h4># Links, referências e projetos</h4>
 
-				<a href="https://github.com/ropsnap" target="_blank">https://github.com/ropsnap</a><br>
-				<a href="https://play.google.com/store/apps/developer?id=ropSoft" target="_blank">https://play.google.com/store/apps/developer?id=ropSoft</a> 
+				<a href="https://github.com/ropsnap" target="_blank">GitHub - ropSnap</a><br>
+				<a href="https://play.google.com/store/apps/developer?id=ropSoft" target="_blank">GooglePlay - ropSoft</a> 
 
 			</div>
 
