--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 					
 					<span class="list-item">
-						<span>Nome</span>: <b>Rodolfo Pereira Paranhos G. de Melo</b>
+						<span>Nome</span>: <b>Rodolfo Pereira Paranhos</b>
 					</span class="list-item">
 					
 					<span class="list-item">
